--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.3",
     "prisma": "^5.2.0",
+    "redis": "^4.6.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
     "winston": "^3.10.0"
@@ -33,6 +34,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/redis": "^4.0.11",
     "nodemon": "^3.0.1"
   }
 }
