--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,9 +2,9 @@ version: "3"
 
 services:
   app:
-    image: my-risevest-app
+    image: risevest-backend-test
     ports:
-      - "13000:5001"
+      - "13000:13000"
     depends_on:
       - postgres
       - redis
@@ -12,7 +12,7 @@ services:
   postgres:
     image: postgres:latest
     environment:
-      POSTGRES_DB: imehusoro
+      POSTGRES_DB: risevest-db
       POSTGRES_USER: imehusoro
       POSTGRES_PASSWORD: imehusoro
     ports:
@@ -23,9 +23,10 @@ services:
   redis:
     image: redis:latest
     ports:
-      - "6379:6379"
+      - "6380:6379"
     volumes:
       - redis_data:/data
 
 volumes:
   pg_data:
+  redis_data:
