--- a/.env
+++ b/.env
@@ -4,7 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://imehusoro:imehusoro@postgres:5432/risevest-db?schema=public"
-# DATABASE_URL="postgresql://imehusoro:imehusoro@localhost:5432/risevest-db?schema=public"
+# DATABASE_URL="postgresql://imehusoro:imehusoro@postgres:5432/risevest-db?connect_timeout=300?schema=public"
+DATABASE_URL="postgresql://imehusoro:imehusoro@localhost:5432/risevest-db?schema=public"
+
 
 JWT_SECRET="Risevest"
