--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,12 +2,15 @@ version: "3"
 
 services:
   app:
-    image: risevest-backend-test
+    build: .
+    # restart: always
     ports:
-      - "13000:13000"
+      - "5001:5001"
     depends_on:
       - postgres
       - redis
+    environment:
+      DATABASE_URL: "postgresql://imehusoro:imehusoro@postgres:5432/risevest-db?schema=public"
 
   postgres:
     image: postgres:latest
