--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll --no-cache",
     "start": "npm run build && node ./dist/index.js",
     "dev": "nodemon --legacy-watch --watch './src/**/*.ts' --exec 'ts-node' ./src/index.ts",
     "build": "tsc -p ."
@@ -28,13 +28,20 @@
     "redis": "^4.6.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "uuid": "^9.0.0",
     "winston": "^3.10.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
+    "@types/jest": "^29.5.4",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/redis": "^4.0.11",
-    "nodemon": "^3.0.1"
+    "@types/supertest": "^2.0.12",
+    "@types/uuid": "^9.0.2",
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1"
   }
 }
