--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "typeRoots": ["./src/typings", "./node_modules/@types"],
+    "forceConsistentCasingInFileNames": true
   }
 }
