--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ DATABASE_URL="postgresql://imehusoro:imehusoro@localhost:5432/risevest-db?schema
 
 
 JWT_SECRET="Risevest"
+
+REDIS_URL="redis://red-cjl7hs0cfp5c73ffhgg0:6379"
+
+NODE_ENV="development"
