--- a/.env
+++ b/.env
@@ -5,7 +5,8 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # DATABASE_URL="postgresql://imehusoro:imehusoro@postgres:5432/risevest-db?connect_timeout=300?schema=public"
-DATABASE_URL="postgresql://imehusoro:imehusoro@localhost:5432/risevest-db?schema=public"
+# DATABASE_URL="postgresql://imehusoro:imehusoro@localhost:5432/risevest-db?schema=public"
+# DATABASE_URL="postgres://risevest_pg_db_user:h0LtIG4Bj77kzEmgk9cSYE9apGSllVf7@dpg-cjl7lu8cfp5c73fg19bg-a/risevest_pg_db"
 
 
 JWT_SECRET="Risevest"
