--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/supertest": "^2.0.12",
     "@types/uuid": "^9.0.2",
     "jest": "^29.6.4",
+    "jest-mock-extended": "^3.0.5",
     "nodemon": "^3.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1"
