fixed post showing password

--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 # local
-# DATABASE_URL="postgresql://imehusoro:imehusoro@localhost:5432/risevest-db?schema=public"
+DATABASE_URL="postgresql://imehusoro:imehusoro@localhost:5432/risevest-db?schema=public"
 # test db local
 # DATABASE_URL_TEST="postgresql://imehusoro:imehusoro@localhost:5432/risevest-db-test?schema=public"
 
@@ -14,7 +14,7 @@
 
 
 # live internal render db
-DATABASE_URL="postgres://risevest_pg_db_user:h0LtIG4Bj77kzEmgk9cSYE9apGSllVf7@dpg-cjl7lu8cfp5c73fg19bg-a/risevest_pg_db"
+# DATABASE_URL="postgres://risevest_pg_db_user:h0LtIG4Bj77kzEmgk9cSYE9apGSllVf7@dpg-cjl7lu8cfp5c73fg19bg-a/risevest_pg_db"
 
 # live public render db
 # DATABASE_URL="postgres://risevest_pg_db_user:h0LtIG4Bj77kzEmgk9cSYE9apGSllVf7@dpg-cjl7lu8cfp5c73fg19bg-a.oregon-postgres.render.com/risevest_pg_db"
@@ -23,7 +23,8 @@ DATABASE_URL="postgres://risevest_pg_db_user:h0LtIG4Bj77kzEmgk9cSYE9apGSllVf7@dp
 JWT_SECRET="Risevest"
 
 # live internal render redis
-REDIS_URL="redis://red-cjl7hs0cfp5c73ffhgg0:6379"
+# REDIS_URL="redis://red-cjl7hs0cfp5c73ffhgg0:6379"
+REDIS_URL="redis://localhost:6379"
 
 # live public render redis
 # REDIS_URL="rediss://red-cjl7hs0cfp5c73ffhgg0:PgGFr4F3enI5IPRH6vjKlfB4f6VxInwJ@oregon-redis.render.com:6379"
